change_streams_primary_shard_unaware.js fails when IndexBuildsCoordinator is enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-15
    • 17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the IndexBuildsCoordinator is enabled for the createIndexes command on the primary, running the change_streams_primary_shard_unaware.js in the sharding suite fails eventually. This seems to be related to the test stepping down the primary as the createIndexes command is delegating the remaining work for the index build to the IndexBuildsCoordinator's thread pool.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: