SERVER-42154 abort index builds on NotMaster errors when using IndexBuildsCoordinator