jstests/noPassthrough/index_stepdown_during_scan.js
@@ -1,0 +1,60 @@
+/**
+ * Confirms that background index builds on a primary are aborted when the node steps down during
+ * the collection scan phase.
+ * @tags: [requires_replication]
+ */
+(function() {
+    "use strict";
+
+    load('jstests/noPassthrough/libs/index_build.js');
+
+    const rst = new ReplSetTest({
+        nodes: [
+            {},
+            {
+              // Disallow elections on secondary.
+              rsConfig: {
+                  priority: 0,
+                  votes: 0,
+              },
+            },
+        ]
+    });
+    const nodes = rst.startSet();
+    rst.initiate();
+
+    const primary = rst.getPrimary();
+    const testDB = primary.getDB('test');
+    const coll = testDB.getCollection('test');
+
+    assert.writeOK(coll.insert({a: 1}));
+
+    IndexBuildTest.pauseIndexBuilds(primary);
+
+    const createIdx = IndexBuildTest.startIndexBuild(primary, coll.getFullName(), {a: 1});
+
+    // When the index build starts, find its op id.
+    const opId = IndexBuildTest.waitForIndexBuildToScanCollection(testDB, coll.getName(), 'a_1');
+
+    IndexBuildTest.assertIndexBuildCurrentOpContents(testDB, opId);
+
+    try {
+        // Step down the primary.
+        assert.commandWorked(primary.adminCommand({replSetStepDown: 60, force: true}));
+    } finally {
+        IndexBuildTest.resumeIndexBuilds(primary);
+    }
+
+    // Wait for the index build to stop.
+    IndexBuildTest.waitForIndexBuildToStop(testDB);
+
+    const exitCode = createIdx({checkExitSuccess: false});
+    assert.neq(
+        0, exitCode, 'expected shell to exit abnormally due to index build being terminated');
+
+    // Check that no new index has been created.  This verifies that the index build was aborted
+    // rather than successfully completed.
+    IndexBuildTest.assertIndexes(coll, 1, ['_id_']);
+
+    rst.stopSet();
+})();
